# python-standard-bits

./: .bumpversion.cfg  .dockerignore  .pre-commit-config.yaml  .scaraplate.conf  .travis.yml  .yamllint  Dockerfile  Pipfile  README.md  dev.sh  pylama.ini  pyproject.toml
.circleci/: config.yml
.github/workflows/: checks.yaml  deploy.yaml  test_deploy.yaml
